2002-01-22  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02879] reset signals
	* etc.c (reset_signals): added
	* etc.c (mySystem): use reset_signals()
	* file.c (uncompress_stream): use reset_signals()
	* proto.h (reset_signals): added
	* search.c (init_migemo): kill by SIGKILL
	* search.c (open_migemo): use reset_signals()

2002-01-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* url.c (URI_PATTERN): remove \

2002-01-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02878] fix regexp [-...], [...-], []...]
	* regexp.c (newRegex0): if first char is `-' or ']' after '[', 
		it isn't meta char.
		if last char in [..] is `-', it isn't meta char.

2002-01-22  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02877] some fixes for urimethodmap
	* config.h.dist (RC_DIR): remove tailing /
	* configure (mailer): if use_w3mmailer = y, don't ask mailer
	* configure (RC_DIR): remove tailing /
	* fm.h (Mailer): ifndef USE_W3MMAILER
	* main.c (MAIN): ifndef USE_W3MMAILER getenv("MAILER")
	* rc.c ("mailer"): ifndef USE_W3MMAILER
	* regex.c (newRegex0): \ escape kanji chars
	* url.c (searchURIMethods): need escape for - 
	* scripts/w3mmail.cgi.in: move $url, $qurl
	* scripts/w3mmail.cgi.in: url_unquote $to

2002-01-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02876] w3mmail.cgi.in backport from w3mmee
	* action='file://$0'
	* don't add \n to $body's tail
	* $body =~ s/\r+\n/\n/g;
	* s/@cmd/@opt/
	* url_unquote: + should be unquote too

2002-01-18  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02873] delete "decode MIME-body" in doc{,-jp}/README
	* doc-jp/README: delete "decode MIME-body"
	* doc/README: ditto

2002-01-18  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 02872] EWS4800 sh doesn't work ${param-word}
	* configure (use_migemo): change migemo URL
	* configure (def_migemo_command): fix for EWS4800
	* configure (def_image_viewer): ditto
	* configure (def_audio_player): ditto
